fix: avoid vertical scrollbar for TEXT items (DHIS2-17355)
I don't quite understand this one, but it has to do with the percentage
height on the rich text div and the content-box height of the parent
container.
The fix has to be in the parent div since the rich text component can be
used in other places.

--- a/src/components/styles/ItemGrid.css
+++ b/src/components/styles/ItemGrid.css
@@ -65,6 +65,10 @@
     overflow: auto;
 }
 
+.TEXT .dashboard-item-content {
+    padding-bottom: var(--item-content-padding);
+}
+
 .EVENT_REPORT .dashboard-item-content {
     position: relative;
 }
